--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,13 +7,15 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  cached_network_image: 3.3.1
   flutter:
     sdk: flutter
+  flutter_staggered_grid_view: ^0.7.0
 
 dev_dependencies:
+  flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
